[metadata]
name = ivcurves
description =
author = ivcurves Development Team
license = BSD-3-Clause
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = ivcurves
install_requires =
    pvlib
    mpmath
python_requires = >=3.7
zip_safe = no
include_package_data = yes

[options.extras_require]
testing = 
    pytest

