[metadata]
name = ivcurves
description =
author = ivcurves Development Team
license = BSD-3-Clause
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = ivcurves
install_requires =
    matplotlib >=3.5.2
    mpmath >=1.2.1
    pvlib >=0.9.1

python_requires = >=3.7
zip_safe = no
include_package_data = no

[options.package_data]
ivcurves =
    test_sets/*.csv
    test_sets/*.json

[options.extras_require]
testing =
    pytest
    jschon
docs =
    pydata-sphinx-theme ==0.9.0
    sphinx ==5.0.2
    sphinxcontrib.datatemplates  ==0.9.1
    sphinxcontrib-autoprogram ==0.1.7
    sphinxcontrib-mermaid ==0.8.1

